@@ -25,6 +25,7 @@ import org.apache.flink.sql.parser.dml.SqlStatementSet;
 
 import org.apache.calcite.sql.SqlCall;
 import org.apache.calcite.sql.SqlKind;
+import org.apache.calcite.sql.SqlLiteral;
 import org.apache.calcite.sql.SqlNode;
 import org.apache.calcite.sql.SqlOperator;
 import org.apache.calcite.sql.SqlSpecialOperator;
@@ -33,7 +34,6 @@ import org.apache.calcite.sql.parser.SqlParserPos;
 
 import javax.annotation.Nonnull;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -44,7 +44,17 @@ import java.util.List;
 public class SqlCompilePlan extends SqlCall {
 
     public static final SqlSpecialOperator OPERATOR =
-            new SqlSpecialOperator("COMPILE PLAN", SqlKind.OTHER);
+            new SqlSpecialOperator("COMPILE PLAN", SqlKind.OTHER) {
+                @Override
+                public SqlCall createCall(
+                        SqlLiteral functionQualifier, SqlParserPos pos, SqlNode... operands) {
+                    return new SqlCompilePlan(
+                            pos,
+                            operands[1],
+                            ((SqlLiteral) operands[2]).booleanValue(),
+                            operands[0]);
+                }
+            };
 
     private final SqlNode planFile;
     private final boolean ifNotExists;
@@ -75,7 +85,7 @@ public class SqlCompilePlan extends SqlCall {
     @Nonnull
     @Override
     public List<SqlNode> getOperandList() {
-        return Collections.singletonList(operand);
+        return List.of(operand, planFile, SqlLiteral.createBoolean(ifNotExists, SqlParserPos.ZERO));
     }
 
     @Override
